[project]
name = "grl-amod-with-pt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "ortools>=9.14.6206",
    "pandas>=2.3.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]
